samples/_failures_safe/1761002544_44c26f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e83c18f.c: In function ‘free_graph’:
./samples/SAFE/__tmp_1e83c18f.c:162:5: error: expected expression at end of input
  162 |     if (graph == NULL) return
      |     ^~
./samples/SAFE/__tmp_1e83c18f.c:162:5: error: expected declaration or statement at end of input
